2021-11-04  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Bugfix: Generate correct signatures for raymath and rlgl
	* Pulled latest raylib ( https://github.com/raysan5/raylib/commit/d18f3fca30858916546908e40cc2e0cea2be03ca )
	* Bugfix: Fixed wrong signature in raymath.rb
	* examples/audio_sound_loading.rb: Added
	* examples/audio_music_stream.rb: Added

2021-11-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Added raygui wrapper and wrapper generator
	* examples/shapes_draw_circle_sector.rb: Added

2021-10-31  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/text_unicode.rb: Added
	* examples/textures_bunnymark.rb: Added

2021-10-28  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/core_loading_thread.rb: Added
	* examples/bitmap_font.rb and font/VP16Font_XNA.png: Added

2021-10-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/models_waving_cubes.rb: Added

2021-10-26  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/models_rlgl_solar_system.rb: Added
	* Bugfix: DEG2RAD and RAD2DEG duplication
	* examples/models_cubicmap.rb: Added

2021-10-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/utf8_font.rb: Added

2021-10-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator: Add ".by_value" to struct arguments
	* generator: Add struct alias hook
	* examples: Added
	* examples/shapes_basic_shapes.rb: Added
	* generator: Now correctly handles variable-length arguments (TextFormat and TraceLog)
	* Added helper functions (Color.from_u8, Vector2.create, etc.)
	* examples/core_3d_camera_first_person.rb: Added
	* generator: Now correctly handles return values
	* Bugfix: Removed duplicated enums / Names of some structs must start with capital letter

2021-10-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Experimental raylib header parser

2021-10-17  vaiorabbit  <http://twitter.com/vaiorabbit>

	* initial commit