@@ -1,3 +1,7 @@
+2021-11-05  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* examples/models_box_collisions.rb: Added
+
 2021-11-04  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Bugfix: Generate correct signatures for raymath and rlgl
